--- a/views/blog_content.handlebars
+++ b/views/blog_content.handlebars
@@ -1,7 +1,3 @@
-{{!-- {{#if logged_in}}
-<a class="btn custom-button create-post" href="/blog_new_post" role="button">Create Post</a>
-{{/if}} --}}
-
 <div class="main-container">
   
   {{#if logged_in}}
@@ -11,27 +7,17 @@
   {{#each forums as |forum|}}
   <div class="card">
   <div class="card-header">
-    {{emojifyText forum.name}}
+    {{forum.name}}
   </div>
   <div class="card-body">
-    <a href="/blog_post/{{forum.id}}"><h5 class="card-title">{{emojifyText forum.title}}</h5></a>
-    <p class="card-text">{{emojifyText forum.description}}</p>
+    <a href="/blog_post/{{forum.id}}"><h5 class="card-title">{{forum.title}}</h5></a>
+    <p class="card-text">{{forum.description}}</p>
   </div>
 </div>
   {{/each}}
 </div>
 
-{{!-- <div class="dropdown">
-  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="width: 200px;"></a>
-
-  <ul class="dropdown-menu">
-    {{#each forums as |forum| }}
-      <li id="content"><a class="dropdown-item" href="/{{forum.id}}">{{forum.name}}</a></li>
-    {{/each}}
-  </ul>
-</div> --}}
-
 <script src="../utils/helpers.js"></script>
-{{!-- <script src="./js/refresh.js"></script> --}}
+
 
 
